# newlib

./: config.sub  configure  configure.ac
newlib/: configure.host
newlib/libc/include/: stdio.h
newlib/libc/include/sys/: _default_fcntl.h
newlib/libc/stdio/: fdopen.c  findfp.c  fopen.c  freopen.c  local.h  stdio.c
newlib/libc/stdio64/: fdopen64.c  fopen64.c  freopen64.c  stdio64.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/run386/: Makefile.am  Makefile.in  _exit.c  close.c  configure  crt0.S  dosext.h  fork.c  fstat.c  getpid.c  gettimeofday.c  isatty.c  kill.c  link.c  lseek.c  open.c  premain.c  read.c  rename.c  sbrk.c  stat.c  times.c  toerrno.c  unlink.c  wait.c  write.c
